--- a/app/src/main/res/drawable/background_checkout.xml
+++ b/app/src/main/res/drawable/background_checkout.xml
@@ -4,4 +4,5 @@
         android:angle="45"
         android:endColor="#4ABAFF"
         android:startColor="#0795FF" />
+    <corners android:radius="16dp"/>
 </shape>
