--- a/app/src/main/res/layout/fragment_bookings_history.xml
+++ b/app/src/main/res/layout/fragment_bookings_history.xml
@@ -4,45 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_chat"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context=".MessageAdminActivity">
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/background_toolbar"
-        android:elevation="8dp"
-        app:navigationIcon="@drawable/ic_btn_back"
-        app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
-        app:subtitleTextColor="#FFFFFF"
-        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
-        app:titleTextColor="#FFFFFF" />
-
+    android:background="@drawable/background_body"
+    tools:context=".ui.fragments.admin.bookings.BookingsHistoryAdminFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/chatStatusNone"
+            android:id="@+id/bookingStatusNone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_status_none"
-            android:drawablePadding="16dp"
             android:fontFamily="@font/lato"
-            android:text="No conversation found."
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:text="No bookings found."
+            android:textColor="@color/textColor"
             android:textSize="16sp"
             android:visibility="visible" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatMessageList"
+            android:id="@+id/bookingList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
