--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
-    tools:context=".ui.fragments.HomeFragment">
+    tools:context=".ui.fragments.user.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
