--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragments.RentFragment">
+    android:background="@drawable/background_body"
+    tools:context=".ui.fragments.user.RentFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,15 +62,10 @@
             android:visibility="visible" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatMessageList"
+            android:id="@+id/rentList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingStart="10dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
-            android:visibility="gone"
-            app:reverseLayout="true"
-            app:stackFromEnd="true" />
+            android:visibility="gone" />
     </RelativeLayout>
 
 </LinearLayout>
