--- a/app/src/main/res/layout/fragment_van_companies.xml
+++ b/app/src/main/res/layout/fragment_van_companies.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
-    tools:context=".ui.fragments.VanCompanyFragment">
+    tools:context=".ui.fragments.user.VanCompanyFragment">
 
     <TextView
         android:layout_width="match_parent"
