--- a/app/src/main/res/layout/booking_history_item_layout.xml
+++ b/app/src/main/res/layout/booking_history_item_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bookingCard"
@@ -52,14 +52,36 @@
                             android:textAppearance="?attr/textAppearanceHeadline6"
                             android:textColor="@color/textColor" />
 
-                        <TextView
-                            android:id="@+id/bookingCustomerEmail"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato"
-                            android:text="customer_email"
-                            android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="@color/textColor" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/bookingCustomerEmail"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="8dp"
+                                android:ellipsize="end"
+                                android:fontFamily="@font/lato"
+                                android:maxLines="1"
+                                android:text="customer_email"
+                                android:textAppearance="?attr/textAppearanceBody2"
+                                android:textColor="@color/textColor" />
+
+                            <TextView
+                                android:id="@+id/bookingContactNumber"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:ellipsize="end"
+                                android:fontFamily="@font/lato"
+                                android:maxLines="1"
+                                android:text="contact_number"
+                                android:textAppearance="?attr/textAppearanceBody2"
+                                android:textColor="@color/textColor" />
+                        </LinearLayout>
+
                     </LinearLayout>
 
                 </LinearLayout>
@@ -82,19 +104,6 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato"
-                            android:text="Contact Number:"
-                            android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="@color/textColor" />
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="6dp" />
-
-                        <TextView
-
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
@@ -179,23 +188,12 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/bookingContactNumber"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato"
-                            android:text="contact_number"
-                            android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="@color/textColor" />
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="6dp" />
-
-                        <TextView
                             android:id="@+id/bookingLocationFrom"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="location_from"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
@@ -204,7 +202,9 @@
                             android:id="@+id/bookingLocationTo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="location_to"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
@@ -217,7 +217,9 @@
                             android:id="@+id/bookingScheduleDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="schedule_date"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
@@ -226,7 +228,9 @@
                             android:id="@+id/bookingScheduleTime"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="schedule_time"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
@@ -239,7 +243,9 @@
                             android:id="@+id/bookingCountAdult"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="adult_count"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
@@ -248,7 +254,9 @@
                             android:id="@+id/bookingCountChild"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="child_count"
                             android:textAppearance="?attr/textAppearanceBody2"
                             android:textColor="@color/textColor" />
