--- a/app/src/main/res/layout/booking_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_pending_item_layout.xml
@@ -268,7 +268,7 @@
                             android:textColor="@color/textColor" />
 
                         <TextView
-                            android:id="@+id/checkoutTotal"
+                            android:id="@+id/price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_bold"
