--- a/app/src/main/res/layout/chat_message_item_layout.xml
+++ b/app/src/main/res/layout/chat_message_item_layout.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingStart="8dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="8dp">
 
     <RelativeLayout
         android:id="@+id/chatReceiverItem"
@@ -16,15 +17,15 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/receiverPhoto"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:src="@drawable/placeholder_header_user_dp" />
 
         <ImageView
             android:id="@+id/chatBubbleArrowLeft"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/receiverPhoto"
             android:src="@drawable/background_chat_bubble_arrow_left" />
@@ -72,15 +73,15 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/senderPhoto"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/placeholder_header_user_dp" />
 
         <ImageView
             android:id="@+id/chatBubbleArrowRight"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginTop="10dp"
             android:layout_toStartOf="@+id/senderPhoto"
             android:src="@drawable/background_chat_bubble_arrow_right" />
