--- a/app/src/main/res/layout/fragment_rentals_listing.xml
+++ b/app/src/main/res/layout/fragment_rentals_listing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.admin.RentalsListingFragment">
+    tools:context=".ui.fragments.admin.rentals.RentalsListingFragment">
 
 
 
