--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,5 +75,5 @@
         app:itemIconTint="@color/colorPrimary"
         app:itemTextAppearance="@style/ToolbarSubtitleTextAppearance"
         app:itemTextColor="@color/textColor"
-        app:menu="@menu/nav_drawer_header" />
+        app:menu="@menu/nav_drawer_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
