--- a/app/src/main/res/layout/activity_message_admin.xml
+++ b/app/src/main/res/layout/activity_message_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_chat"
+    android:background="#FFFFFF"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".MessageAdminActivity">
@@ -37,7 +37,7 @@
             android:fontFamily="@font/lato"
             android:text="No conversation found."
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/textColor"
             android:textSize="16sp"
             android:visibility="visible" />
 
