--- a/app/src/main/res/layout/booking_history_item_layout.xml
+++ b/app/src/main/res/layout/booking_history_item_layout.xml
@@ -274,7 +274,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/lato_bold"
-                                android:text="₱"
+                                android:text="@string/peso_sign"
                                 android:textAppearance="?attr/textAppearanceHeadline6"
                                 android:textColor="@color/textColor" />
 
