--- a/app/src/main/res/layout/fragment_booking_history.xml
+++ b/app/src/main/res/layout/fragment_booking_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.user.profile.ProfileBookingHistoryFragment">
+    tools:context=".ui.fragments.user.booking.BookingHistoryFragment">
 
     <TextView
         android:id="@+id/bookingStatusNone"
