--- a/app/src/main/res/navigation/mobile_navigation_drawer.xml
+++ b/app/src/main/res/navigation/mobile_navigation_drawer.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_profile"
-        android:name="com.opustech.bookvan.ui.fragments.user.profile.ProfileFragment"
-        android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        android:id="@+id/nav_booking"
+        android:name="com.opustech.bookvan.ui.fragments.user.booking.BookingFragment"
+        android:label="@string/title_booking"
+        tools:layout="@layout/fragment_booking" />
 
     <fragment
         android:id="@+id/nav_van_companies"
