--- a/app/src/main/res/layout/booking_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_pending_item_layout.xml
@@ -28,7 +28,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/lato_bold"
                     android:text="Ref. No.:"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -40,7 +40,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:maxLines="1"
                     android:text="reference_number"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="@color/textColor" />
             </LinearLayout>
 
@@ -76,7 +76,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
                         android:text="customer_name"
-                        android:textAppearance="?attr/textAppearanceHeadline6"
+                        android:textSize="16sp"
                         android:textColor="@color/textColor" />
 
                     <LinearLayout
@@ -93,7 +93,7 @@
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
                             android:text="customer_email"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -105,7 +105,7 @@
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
                             android:text="contact_number"
-                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
                     </LinearLayout>
                 </LinearLayout>
@@ -140,9 +140,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/lato_bold"
                     android:text="location_from"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -150,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato"
                     android:text="-to-"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -158,9 +158,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/lato_bold"
                     android:text="location_to"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
             </LinearLayout>
@@ -181,7 +181,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/lato"
                     android:text="schedule_date"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -191,7 +191,7 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/lato"
                     android:text="schedule_time"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
             </LinearLayout>
@@ -212,7 +212,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/lato"
                     android:text="adult_count"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -222,14 +222,14 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/lato"
                     android:text="child_count"
-                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="14sp"
                     android:textColor="@color/textColor" />
 
             </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="16dp" />
+                android:layout_height="8dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -242,7 +242,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/lato_bold"
                     android:text="Price:"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -251,7 +251,7 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/peso_sign"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="@color/textColor" />
 
                 <TextView
@@ -260,7 +260,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_bold"
                     android:text=""
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="@color/textColor" />
             </LinearLayout>
 
